idea/testData/multiModuleHighlighting/hierarchicalExpectActualMatching/topLevelProperties/jvm-1/jvm-1.kt
package sample

actual val <T> T.x1 by lazy { 10 <!UNCHECKED_CAST("Int", "T")!>as T<!> }

actual val x1: List<Int> get() = listOf(1)
